tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-dot/expected.err
Error: invalid syntax: invalid overlay field declaration 'junk': expected '.field'; inside brackets: [
  .a:byte,
  junk
]
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-dot/input.k65:3:3 ]
   │
 3 │   junk
   │   ──┬─  
   │     ╰─── here
───╯

